[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "pybind11>=2.11"
]
build-backend = "setuptools.build_meta"

[project]
name = "voidproxy"
version = "0.1.0"
description = "High-performance intelligent JSON traffic analysis proxy"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "YourName" }
]

dependencies = [
    "rich>=13.0",
    "typer>=0.9",
]

[project.scripts]
voidproxy = "voidproxy.cli:app"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.ext_modules]